--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <h1 class="card-title">Hi, I'm Anna Smith.</h1>
             <p class="card-text">I wear a lot of hats. These hats serve a better purpose - to equip me to be the best storyteller I can be. No two people are alike. No two stories are alike. Let me tell your story.</p>
             <p class="button"><a class="press" href="https://example.com" target="_blank">Let's Connect!</a></p>
-            <a href="https://example.com" target="_blank"><img src="C:\Users\toshiba\Desktop\Landing Page About\CSS\images\black-facebook.png" alt="" width="50" style="max-width: 50px;border:0;padding: 20px 10px 0 0;"></a>
-            <a href="https://example.com" target="_blank"><img src="C:\Users\toshiba\Desktop\Landing Page About\CSS\images\black-twitter.png" alt="" width="50" style="max-width: 50px;border:0;padding: 20px 10px 0 0;"></a>
-            <a href="https://example.com" target="_blank"><img src="C:\Users\toshiba\Desktop\Landing Page About\CSS\images\black-linkedin.png" alt="" width="50" style="max-width: 50px;border:0;padding: 20px 10px 0 0;"></a>
+            <a href="https://example.com" target="_blank"><img src="images/black-facebook.png" alt="" width="50" style="max-width: 50px;border:0;padding: 20px 10px 0 0;"></a>
+            <a href="https://example.com" target="_blank"><img src="images/black-twitter.png" alt="" width="50" style="max-width: 50px;border:0;padding: 20px 10px 0 0;"></a>
+            <a href="https://example.com" target="_blank"><img src="images/black-linkedin.png" alt="" width="50" style="max-width: 50px;border:0;padding: 20px 10px 0 0;"></a>
           </div>
         </div>
       </div>
