--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Card -->
         <div class="card shadow-1-strong">
           <div class="card-body">
-            <h1 class="card-title">Hi, I'm Anna Smith.</h1>
+            <h1 class="card-title">Hi, I'm Nelly Smith.</h1>
             <p class="card-text">I wear a lot of hats. These hats serve a better purpose - to equip me to be the best storyteller I can be. No two people are alike. No two stories are alike. Let me tell your story.</p>
             <p class="button"><a class="press" href="https://example.com" target="_blank">Let's Connect!</a></p>
             <a href="https://example.com" target="_blank"><img src="images/black-facebook.png" alt="" width="50" style="max-width: 50px;border:0;padding: 20px 10px 0 0;"></a>
@@ -31,7 +31,7 @@
     </div>
   </div>
   <footer class="fixed-bottom">
-    <p class="copyright">© Anna Smith</p>
+    <p class="copyright">© Nelly Smith</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
